--- a/Dark+.theme.css
+++ b/Dark+.theme.css
@@ -1,23 +1,13 @@
 /**
-  * @name Dark+
-  * @author DevEvil#8745
-  * @version Dark+3
-  * @description Highly customized dark and purple theme for Discord
-  * @authorId 468132563714703390
-  * @authorLink https://devevil.com
-  * @source https://github.com/DevEvil99/DarkPlus-Discord-Theme
-  * @website https://devevil.com
-  * @invite jsQ9UP7kCA
+  * @name hex
+  * @author hexthelynx
 */
 
-@import url('https://devevil99.github.io/devevil/BetterDiscordAddons/Theme/Dark+/Dark+.theme.css');
-
 :root {
-  --darkplus-bg: #212121;
-  --darkplus-bg2: #302f2f;
-  --darkplus-sec: #bb86fc;
-  --darkplus-links: #cdaef3;
-  --darkplus-home-icon: url(https://cdn.discordapp.com/attachments/468141324906921984/852117175212179466/discord-avatar-512-YV0PV.png);
+  --darkplus-bg: #111617;
+  --darkplus-bg2: #1b2324;
+  --darkplus-sec: #b7b7b5;
+  --darkplus-links: #5c00ce;
  --watermark-filter-invert: 0%;
   --watermark-filter-sepia: 50%;
   --watermark-filter-saturate: 3000%;
